fix alignment

--- a/webapp/app/assets/stylesheets/gravitly-style.less
+++ b/webapp/app/assets/stylesheets/gravitly-style.less
@@ -288,7 +288,8 @@ body,html {
 
 .post-details{
 	margin: 10px 0px 0px 0px;
-	
+	width: 300px;
+	float: left;
 	.details-container{
 		float: left;
 	}
